# ml-log

./: CMakeLists.txt  README.md  build.sh  compile_flags.txt  ml-log.conf  tmux.sh
src/: main.cpp  utils.hpp
src/ml_log/: logger.hpp  main.cpp  ml_log.cpp  redis_commands.hpp  structs.hpp
src/ml_log/web_server/: QueryController.hpp  web_server.cpp
src/web_server/: main.cpp  web_server.cpp  web_server.hpp
src/web_server/controllers/: QueryController.cpp  QueryController.hpp
web/: .eslintcache  package-lock.json  package.json
web-client/: index.html
web/public/: index.html
web/src/: App.js  config.json  index.js
web/src/components/: AddPlotDialog.js  Plots.js
web/src/routes/: Home.js
web/src/services/: ApplicationRedisSingleton.js  EventEmitter.js
